# nowa

./: BUILD  Dockerfile  README.md  WORKSPACE  docker-compose.yaml  go.mod  go.sum  server.go
client/: BUILD  BUILD.bazel  client.go
docker/: client.dockerfile  dart_protoc.dockerfile  database.dockerfile  docker-compose.yaml  protoc.dockerfile  server.dockerfile
internal/server/: nowaserver.go
protos/: BUILD  BUILD.bazel  nowa.pb.go  nowa.proto  restaurant.pb.go  restaurant.proto  service.pb.go  service.proto
schema/: Dockerfile  fake_data.sql  schema.sql
scripts/: generate_protos.sh  setup_database.sh
server/: BUILD  BUILD.bazel  server.go
server/proto/: nowa.pb.dart  nowa.pb.go  nowa.pbenum.dart  nowa.pbjson.dart  nowa.proto  service.pb.dart  service.pb.go  service.pbenum.dart  service.pbgrpc.dart  service.pbjson.dart  service.proto
