load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "github.com/booneng/nowa/server",
    visibility = ["//visibility:private"],
    deps = [
        "//protos:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
